@@ -297,32 +297,20 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\
   if (output_dir == NULL)
     output_dir = ".";
 
-  /* Construct the name of the ouput file.  If the default domain has
+  /* Construct the name of the output file.  If the default domain has
      the special name "-" we write to stdout.  */
   if (output_file)
-  {
-    if (output_file[0] == '/' ||
-      strcmp(output_dir, ".") == 0 ||
-      strcmp(output_file, "-") == 0
-    )
-      file_name = xstrdup (output_file);
-    else
     {
-      /* Please do NOT add a .po suffix! */
-      file_name = xmalloc (strlen (output_dir) + strlen (default_domain) + 2);
-      strcat (strcat (strcpy(file_name, output_dir), "/"), output_file);
+      if (IS_ABSOLUTE_PATH (output_file) || strcmp (output_file, "-") == 0)
+	file_name = xstrdup (output_file);
+      else
+	/* Please do NOT add a .po suffix! */
+	file_name = concatenated_pathname (output_dir, output_file, NULL);
     }
-  }
   else if (strcmp (default_domain, "-") == 0)
     file_name = "-";
   else
-    {
-      file_name = (char *) xmalloc (strlen (output_dir)
-				    + strlen (default_domain)
-				    + sizeof (".po") + 2);
-      stpcpy (stpcpy (stpcpy (stpcpy (file_name, output_dir), "/"),
-	default_domain), ".po");
-    }
+    file_name = concatenated_pathname (output_dir, default_domain, ".po");
 
   /* Determine list of files we have to process.  */
   if (files_from != NULL)
@@ -368,7 +356,7 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\
       if (mp->used > more_than && mp->used < less_than)
         ++j;
       else
-        message_list_delete_nth(mlp, j);
+        message_list_delete_nth (mlp, j);
     }
 
   /* Sorting the list of messages.  */
