@@ -58,7 +58,6 @@ open_po_file (input_name, file_name)
   FILE *ret_val;
   int j, k;
   const char *dir;
-  const char *ext;
 
   if (strcmp (input_name, "-") == 0 || strcmp (input_name, "/dev/stdin") == 0)
     {
@@ -68,13 +67,11 @@ open_po_file (input_name, file_name)
 
   /* We have a real name for the input file.  If the name is absolute,
      try the various extensions, but ignore the directory search list.  */
-  if (*input_name == '/')
+  if (IS_ABSOLUTE_PATH (input_name))
     {
       for (k = 0; k < SIZEOF (extension); ++k)
 	{
-	  ext = extension[k];
-	  *file_name = xmalloc (strlen (input_name) + strlen (ext) + 1);
-	  stpcpy (stpcpy (*file_name, input_name), ext);
+	  *file_name = concatenated_pathname ("", input_name, extension[k]);
 
 	  ret_val = fopen (*file_name, "r");
 	  if (ret_val != NULL || errno != ENOENT)
@@ -92,20 +89,7 @@ open_po_file (input_name, file_name)
       for (j = 0; (dir = dir_list_nth (j)) != NULL; ++j)
 	for (k = 0; k < SIZEOF (extension); ++k)
 	  {
-	    ext = extension[k];
-	    if (dir[0] == '.' && dir[1] == '\0')
-	      {
-		*file_name = xmalloc (strlen(input_name) + strlen(ext) + 1);
-		stpcpy (stpcpy (*file_name, input_name), ext);
-	      }
-	    else
-	      {
-		*file_name = xmalloc (strlen (dir) + strlen (input_name)
-				      + strlen (ext) + 2);
-		stpcpy (stpcpy (stpcpy (stpcpy (*file_name, dir), "/"),
-				input_name),
-			ext);
-	      }
+	    *file_name = concatenated_pathname (dir, input_name, extension[k]);
 
 	    ret_val = fopen (*file_name, "r");
 	    if (ret_val != NULL || errno != ENOENT)
