@@ -1,3 +1,12 @@
+2001-03-04  Bruno Haible  <haible@clisp.cons.org>
+
+	* system.h (ISSLASH, HAS_DEVICE, IS_ABSOLUTE_PATH, IS_PATH_WITH_DIR,
+	FILESYSTEM_PREFIX_LEN): New macros.
+	(concatenated_pathname): New declaration.
+	(SET_BINARY): New macro.
+	* concatpath.c: New file.
+	* Makefile.am (libnlsut_a_SOURCES): Add concatpath.c.
+
 2001-03-03  Bruno Haible  <haible@clisp.cons.org>
 
 	* gen-lbrkprop.c: New file.
